compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/specialNames/dataClassCopy.fir.kt
// COMPARE_WITH_LIGHT_TREE
// !DIAGNOSTICS: -UNUSED_PARAMETER

<!CONFLICTING_JVM_DECLARATIONS{LT}!>data class <!CONFLICTING_JVM_DECLARATIONS{PSI}!>C(val c: Int)<!> {
    <!CONFLICTING_JVM_DECLARATIONS{LT}!><!CONFLICTING_JVM_DECLARATIONS{PSI}!>fun `copy$default`(c: C, x: Int, m: Int, mh: Any)<!> = C(this.c)<!>
}<!>
